Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29895

prepared view crash server (unit.conc_view)

    XMLWordPrintable

Details

    Description

      Reduced test case (reproducable only with first solution of MDEV-29662):

      CREATE TABLE LTDX (
       USERNAME varchar(12) NOT NULL,
       SRTF2 int(11) NOT NULL);
      CREATE VIEW V_LTDX AS
        select T0001.USERNAME AS USERNAME
          from LTDX T0001 where (T0001.SRTF2 = 0);
       
      set @a1="1";
      set @a2="1";
       
      prepare stmt from
      "select username from V_LTDX where username in ( ? , ? )";
       
      execute stmt using @a1,@a2;
       
      deallocate prepare stmt;
       
      DROP VIEW V_LTDX;
      DROP TABLE LTDX;
      

      caused by 5027cb2b74a0b37cbdd3ad190cb8b2bf738c0cde

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              sanja Oleksandr Byelkin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5h
                  5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.